# stm32f7-httpd

./: Cargo.toml  README.md  gdb.sh  pixel.js
examples/: wiki.rs
examples/wiki/: index.html  notfound.html  view.html
src/: lib.rs  main.rs
src/httpd/: index.html  mod.rs  notfound.html  parser.rs  request.rs  response.rs  routes.rs  status.rs
src/logger/: mod.rs
