[package]
name = "stm32f7-httpd"
version = "0.1.0"
authors = ["Lukas Brocke <lukas@brocke.net>"]
edition = "2018"
description = "A simple HTTP server for the STM32F7-Discovery board"

[dependencies]
cortex-m = "0.5.0"
cortex-m-rt = "0.6.4"
cortex-m-semihosting = "0.3.0"
alloc-cortex-m = "0.3.4"

[dependencies.stm32f7]
version = "0.3.2"
features = ["stm32f7x6", "rt"]

[dependencies.stm32f7-discovery]
git = "https://github.com/embed-rs/stm32f7-discovery.git"

[dependencies.smoltcp]
#version = "0.5.0"
git = "https://github.com/astro/smoltcp.git"
branch = "dhcp"
default-features = false
features = ["alloc", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "proto-ipv4", "proto-dhcpv4"]

[patch.crates-io.cortex-m-rt]
git = "https://github.com/rust-embedded/cortex-m-rt.git"

[profile.release]
lto = true
